--- a/style2.css
+++ b/style2.css
@@ -22,8 +22,8 @@ body, h1, h2, h3, h4, p, a {
 .header {
   height: 100vh;
   background-image: url(./images/headshot.jpg);
-  background-size: ;
-  background-position: ;
+  background-size: auto;
+  background-position: auto;
   text-align: center;
 }
 
@@ -35,6 +35,12 @@ body, h1, h2, h3, h4, p, a {
   text-transform: uppercase;
   max-width: 1240px;
   margin: auto;
+}
+
+.h2 {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .overlay {
@@ -52,11 +58,30 @@ body, h1, h2, h3, h4, p, a {
   margin: 100px auto 50px;
 }
 
-/* add CSS rules for cards and their content here */
+.card {
+  width: 350px;
+  font-size: 16px;
+  margin-bottom: 60px;
+  padding: 45px 45px 70px;
+  background: #ffffff;
+  box-shadow: 4px 4px 5px rgba(0 , 132, 255, 0.4);
+}
+
+.card_image {
+  width: 100%;
+  margin-bottom: 25px;
+  height: 200px;
+  object-fit: contain;
+}
 
 .footer {
   display: flex;
-  /* add missing declarations */
+  min-height: 300px;
+  background-color: #000000;
 }
 
-/* add a CSS rule for the footer signature */
+.p {
+  font-size: 24px;
+  background-color: #ffffff;
+  margin: auto;
+}
